[gd_scene load_steps=3 format=2]

[ext_resource path="res://CoinSpawner.gd" type="Script" id=1]
[ext_resource path="res://Assets/Actors/PickUps/Coin/Coin.tscn" type="PackedScene" id=2]

[node name="CoinSpawner" type="Node2D"]
script = ExtResource( 1 )
_Formation = 2

[node name="Coin" parent="." instance=ExtResource( 2 )]

[node name="Coin2" parent="." instance=ExtResource( 2 )]
position = Vector2( 16, 0 )

[node name="Coin3" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 0 )

[node name="Coin4" parent="." instance=ExtResource( 2 )]
position = Vector2( 48, 0 )
